Create setup.ps1 for Windows

--- a/sources/.emacs.d/emacs.org
+++ b/sources/.emacs.d/emacs.org
@@ -235,7 +235,7 @@ emacsを使う理由その1。
   (add-to-list 'completion-at-point-functions #'cape-dabbrev)
   (add-to-list 'completion-at-point-functions #'cape-file)
   (add-to-list 'completion-at-point-functions #'cape-keyword)
-  (add-to-list 'completion-at-point-functions #'cape-symbol)
+  ;; (add-to-list 'completion-at-point-functions #'cape-symbol)
 
   (define-key global-map
               (kbd "C-c c p") #'completion-at-point)
